# rag-demo

./: .gitignore  README.md  bot.py  embed.py  graph.py  main.py  pyproject.toml  rag.ipynb  rag.py  requirements.txt
data/: business.md  domain.md  home.md  hosting.md  vps.md
generation/: __init__.py
graph/: State.py  __init__.py
retrieval/: __init__.py
